# forge-Ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
eval/: dataset.json  eval_set.json  evaluator.py  metrics.py  run_eval.py  structured_eval_set.json
forge/: bootstrap.py  cli.py  config.py  profiling.py
forge/agent/: executor.py  planner.py  tools.py
forge/analytics/: queries.py  schema.py
forge/api/: __init__.py  app.py  dependencies.py  models.py  routes.py
forge/pipeline/: clean.py  github.py  ingest.py  profile.py
forge/rag/: embed.py  embedding.py  rerank.py  retrieve.py  vectorstore.py
forge/search/: __init__.py  query_normalizer.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: api-url-provider.tsx  app-shell.tsx  dashboard.tsx  evidence-list.tsx  health-dashboard.tsx  investigation-summary.tsx  performance-card.tsx  providers.tsx  system-status.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx
frontend/hooks/: use-forge-api.ts
frontend/lib/: api.ts  types.ts  utils.ts
tests/: test_agent_planner.py  test_api.py  test_bootstrap.py  test_cli_polish.py  test_config.py  test_embedding_scope.py  test_evaluation.py  test_forge.py  test_github.py  test_search_relevance.py
