[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-ai"
version = "0.1.0"
description = "Incremental support-ticket RAG and agent CLI"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "requests>=2.31", "openai>=1.40", "chromadb>=0.5", "python-dotenv>=1.0"]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]
